upgrade openai and fix version of openai-whisper.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 PyYAML>=6.0.1
 TTS==0.22.0
+discord.py==2.5.2
 faster-whisper
 gnupg==2.3.1
 kizano
-discord.py==2.5.2
-slack_bolt==1.23.0
-slack_sdk==3.36.0
-python-dotenv==1.1.1
 langchain-community==0.2.15
 langchain-core==0.2.37
 langchain-ollama==0.1.3
@@ -14,11 +11,14 @@ langchain-postgres==0.0.9
 langchain-text-splitters==0.2.2
 langchain==0.2.15
 numba==0.60.0
-openai-whisper
-openai==1.43.0
+openai-whisper==20250625
+openai==1.99.9
+openwebui-client==0.3.2
 pasimple==0.0.3
 psycopg2==2.9.10
+python-dotenv==1.1.1
 python-ffmpeg==2.0.12
 requests==2.32.3
+slack_bolt==1.23.0
+slack_sdk==3.36.0
 unstructured==0.16.11
-openwebui-client==0.3.2
