--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ TTS==0.22.0
 discord.py==2.6.0
 faster-whisper
 gnupg==2.3.1
-kizano
+kizano==1.0.6
 langchain-community==0.2.15
 langchain-core==0.2.37
 langchain-ollama==0.1.3
