--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,26 @@
+[build-system]
+requires = ["setuptools>=80", "wheel", "setuptools-scm>=9"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-dir]
+asthralios = "lib/asthralios"
+
+[tool.setuptools.packages.find]
+where = ["lib"]
+
 [project]
 name = "asthralios"
 version = "1.0.0"
 description = "Markizano's Assistant"
 readme = "README.md"
 requires-python = ">=3.11"
+license = "GPL-3.0-or-later"
+authors = [
+    { name = "Markizano Draconus", email = "python@markizano.net" },
+]
+maintainers = [
+    { name = "Markizano Draconus", email = "python@markizano.net" },
+]
 dependencies = [
     "atlassian-python-api==4.0.4",
     "discord-py==2.6.0",
@@ -33,17 +50,11 @@ dependencies = [
     "tts==0.22.0",
     "unstructured==0.16.11",
 ]
-authors = [
-    { name = "Markizano Draconus", email = "python@markizano.net" },
-]
-maintainers = [
-    { name = "Markizano Draconus", email = "python@markizano.net" },
-]
 keywords = [ "ai", "artificial intelligence", "agentic", "langchain" ]
 
 [project.urls]
 homepage = "https://markizano.net/"
 repository = "https://github.com/markizano/asthralios"
 
-[project.entry-points]
+[project.scripts]
 asthralios = "asthralios.cli:main"
